# JunoLang

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml
.direnv/: flake-profile-1-link
.github/workflows/: check-build.yml  check-fmt.yml  check-license-header.yml  check-tests.yml  cleanup-caches.yml  flake-update.yml  labels.yml  mdbook.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md
examples/: example1.juno  example_stdio.juno  fibonacci_iterative.juno  fibonacci_recursive.juno  functions.juno  helloworld.juno  structs.juno
junocc/: Cargo.toml  README.md  output
junocc/src/: main.rs  optimizer.rs
junolsp/: Cargo.toml
junolsp/src/: backend.rs  completion.rs  config.rs  diagnostics.rs  goto_definition.rs  hover.rs  main.rs  semantic_tokens.rs  workspace.rs
junolsp/src/completion/: file_global_completion.rs  get_program.rs  mod.rs  simple_completion.rs
libjuno/: Cargo.toml  README.md
libjuno/src/: builtin_registry.rs  compile.rs  get_symbols.rs  lib.rs
libjuno/src/ast/: block.rs  expr.rs  item.rs  mod.rs  span.rs  stmt.rs  types.rs
libjuno/src/diagnostics/: builder.rs  code.rs  context.rs  diagnostic.rs  engine.rs  mod.rs  provider.rs  rule.rs  severity.rs
libjuno/src/diagnostics/parser/: classifier.rs  messages.rs  mod.rs  parser.rs  span.rs  suggestion.rs
libjuno/src/diagnostics/providers/: mod.rs  syntax.rs
libjuno/src/grammar/: juno.pest  mod.rs
libjuno/src/ir/: backend.rs  declaration.rs  error.rs  expr.rs  function.rs  mod.rs  runtime.rs  scope.rs  stmt.rs  structs.rs  types.rs
libjuno/src/ir/builtins/: character.rs  memory.rs  memory_ops.rs  mod.rs  reading.rs  strings.rs  writing.rs
libjuno/src/metair/: coercion.rs  expr.rs  generator.rs  intern.rs  lookup.rs  metair.rs  metairgen.rs  mod.rs  ops.rs  program.rs  scope.rs  stmt.rs  types.rs
libjuno/src/parser/: expr_parser.rs  item_parser.rs  mod.rs  parser.rs  stmt_parser.rs  type_parser.rs
libjuno/tests/: compiler.rs  diagnostics.rs
libjuno/tests/wrapper/: compiler.rs  diagnostics.rs  mod.rs  test_file_utils.rs  testing_files.rs
libjuno/tests/wrapper/ir/: declaration.rs  error.rs  function.rs  mod.rs  runtime.rs  stmt.rs  structs.rs  types.rs
libjuno/tests/wrapper/ir/utils/: mod.rs
libjuno/tests/wrapper/test_files/: test0.juno  test_arithmetic.juno  test_arrays.juno  test_comparisons.juno  test_expressions.juno  test_functions.juno  test_helloworld.juno  test_if.juno  test_loop.juno  test_pointers.juno  test_unary.juno  test_while.juno
