[workspace]
members = ["libjuno", "junocc"]

resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
license-file = "LICENSE"
authors = ["L0rdCyclp"]
repository = "https://github.com/L0rdCycl0p/JunoLang"
homepage = "https://github.com/L0rdCycl0p/JunoLang"
readme = "README.md"
keywords = ["compiler", "llvm", "language", "programming-language"]
categories = ["compilers"]

[workspace.dependencies]


inkwell = { version = "0.9.0", features = ["llvm22-1"] }
llvm-sys = "181.3.0"
pest = "2.8.6"
pest_derive = "2.8.6"
phf = "0.14.0"
phf_macros = "0.14.0"
clap = { version = "4.6.1", features = ["derive"] }

[workspace.dependencies.libjuno]
version = "0.1.2"
path = "libjuno"