# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[workspace]
members = ["libjuno", "junocc", "junolsp"]

resolver = "3"

[workspace.package]
version = "0.1.15"
edition = "2024"
license-file = "LICENSE"
authors = ["L0rdCyclp"]
repository = "https://github.com/L0rdCycl0p/JunoLang"
homepage = "https://github.com/L0rdCycl0p/JunoLang"
readme = "README.md"
keywords = ["compiler", "llvm", "language", "programming-language"]
categories = ["compilers"]

[workspace.dependencies]


inkwell = { version = "0.9.0", features = ["llvm22-1"] }
pest = "2.8.6"
pest_derive = "2.8.6"
phf = "0.14.0"
phf_macros = "0.14.0"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
dashmap = "6.2.1"
anyhow = "1.0.103"
miette = { version = "7.6.0", features = ["fancy"] }

[workspace.dependencies.libjuno]
version = "0.1.15"
path = "libjuno"
