# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[workspace]
members = ["libjuno", "junocc", "junolsp"]

resolver = "3"

[workspace.package]
version = "0.1.19"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/L0rdCycl0p/JunoLang"
homepage = "https://github.com/L0rdCycl0p/JunoLang"
readme = "README.md"
keywords = ["compiler", "llvm", "language", "programming-language"]
categories = ["compilers"]

[workspace.dependencies]


inkwell = { version = "0.9", features = ["llvm22-1"] }
pest = "2.8"
pest_derive = "2.8"
phf = "0.14"
phf_macros = "0.14"
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
dashmap = "6"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }

[workspace.dependencies.libjuno]
version = "0.1.19"
path = "libjuno"
