[package]
name = "junocc"
include = [
    "**/*.rs",
    "**/*.pest"
]

version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
[dependencies]
clap.workspace = true
libjuno.workspace = true
