# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "junolsp"
description = "Language Server for JunoLang"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dashmap.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
[dependencies.libjuno]
workspace = true
features = [
    "ast",
    "diagnostics"
]