[package]
name = "libjuno"
keywords = ["language", "junolang", "juno", "programming-language"]
include = [
    "**/*.rs",
    "**/*.pest"
]

version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
[dependencies]
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
llvm-sys = "221.0.1"
pest = "2.8.6"
pest_derive = "2.8.6"
phf = "0.14.0"
phf_macros = "0.14.0"
