[package]
name = "libjuno"
include = [
    "**/*.rs",
    "**/*.pest"
]

version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
inkwell.workspace = true
llvm-sys.workspace = true
pest.workspace = true
pest_derive.workspace = true
phf.workspace = true
phf_macros.workspace = true
