# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "libjuno"
include = [
    "**/*.rs",
    "**/*.pest"
]
description = "Library for JunoLang"

version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
inkwell = {workspace = true, optional = true}
pest.workspace = true
pest_derive.workspace = true
phf.workspace = true
phf_macros.workspace = true
anyhow.workspace = true
miette.workspace = true
[features]
grammar = []

ast = ["grammar"]

metair = ["ast"]

irgen = ["metair",
    "inkwell",
]

compiler = ["irgen"]

diagnostics = []

all = ["compiler", "diagnostics"]
